--- a/src/app/application/modules/dashboard/header/header.html
+++ b/src/app/application/modules/dashboard/header/header.html
@@ -1,268 +1,3 @@
-<div class="top-header">
-    <div class="logo">
-        LOGO
-    </div>
-    <button class="auth-btn">Sign-Up / Sign-In</button>
-</div>
 
-<!-- Main Header -->
-<header class="main-header">
-
-    <!-- Logo -->
-    <div class="menu-bar">
-        <i class="fa-solid fa-bars"></i>
-        <ul class="dropdown">
-            <div class="kids-wear-dropdown">
-                <li><a href="#">Kids wear</a></li>
-                <div class="mega-dropdown">
-                    <div class="column">
-                        <h4>Topwear</h4>
-                        <a>T-Shirts</a>
-                        <a>Casual Shirts</a>
-                        <a>Formal Shirts</a>
-                        <a>Sweatshirts</a>
-                        <a>Sweaters</a>
-                        <a>Jackets</a>
-                        <a>Blazers & Coats</a>
-                        <a>Suits</a>
-                        <a>Rain Jackets</a>
-
-                        <h4>Indian & Festive Wear</h4>
-                        <a>Kurtas & Kurta Sets</a>
-                        <a>Sherwanis</a>
-                        <a>Nehru Jackets</a>
-                        <a>Dhotis</a>
-                    </div>
-
-                    <div class="column">
-                        <h4>Bottomwear</h4>
-                        <a>Jeans</a>
-                        <a>Casual Trousers</a>
-                        <a>Formal Trousers</a>
-                        <a>Shorts</a>
-                        <a>Track Pants & Joggers</a>
-
-                        <h4>Innerwear & Sleepwear</h4>
-                        <a>Briefs & Trunks</a>
-                        <a>Boxers</a>
-                        <a>Vests</a>
-                        <a>Sleepwear & Loungewear</a>
-                        <a>Thermals</a>
-
-                        <h4>Plus Size</h4>
-                    </div>
-
-                    <div class="column">
-                        <h4>Footwear</h4>
-                        <a>Casual Shoes</a>
-                        <a>Sports Shoes</a>
-                        <a>Formal Shoes</a>
-                        <a>Sneakers</a>
-                        <a>Sandals & Floaters</a>
-                        <a>Flip Flops</a>
-                        <a>Socks</a>
-
-                        <h4>Sunglasses & Frames</h4>
-                        <h4>Watches</h4>
-                    </div>
-
-                    <div class="column">
-                        <h4>Sports & Active Wear</h4>
-                        <a>Sports Shoes</a>
-                        <a>Sports Sandals</a>
-                        <a>Active T-Shirts</a>
-                        <a>Track Pants & Shorts</a>
-                        <a>Tracksuits</a>
-                        <a>Jackets & Sweatshirts</a>
-                        <a>Sports Accessories</a>
-                        <a>Swimwear</a>
-
-                        <h4>Gadgets</h4>
-                        <a>Smart Wearables</a>
-                        <a>Fitness Gadgets</a>
-                        <a>Headphones</a>
-                        <a>Speakers</a>
-                    </div>
-
-                    <div class="column">
-                        <h4>Fashion Accessories</h4>
-                        <a>Wallets</a>
-                        <a>Belts</a>
-                        <a>Perfumes & Body Mists</a>
-                        <a>Trimmers</a>
-                        <a>Deodorants</a>
-                        <a>Ties, Cufflinks & Pocket Squares</a>
-                        <a>Accessory Gift Sets</a>
-                        <a>Caps & Hats</a>
-                        <a>Mufflers, Scarves & Gloves</a>
-                        <a>Phone Cases</a>
-                        <a>Rings & Wristwear</a>
-                        <a>Helmets</a>
-
-                        <h4>Bags & Backpacks</h4>
-                        <h4>Luggages & Trolleys</h4>
-                    </div>
-                </div>
-            </div>
-            <div class="men-wear-dropdown">
-                <li><a href="#">Men wear</a></li>
-                <div class="mega-dropdown">
-                <div class="column">
-                    <h4>Topwear</h4>
-                    <a>T-Shirts</a>
-                    <a>Casual Shirts</a>
-                    <a>Formal Shirts</a>
-                    <a>Sweatshirts</a>
-                    <a>Sweaters</a>
-                    <a>Jackets</a>
-                    <a>Blazers & Coats</a>
-                    <a>Suits</a>
-                    <a>Rain Jackets</a>
-
-                    <h4>Indian & Festive Wear</h4>
-                    <a>Kurtas & Kurta Sets</a>
-                    <a>Sherwanis</a>
-                    <a>Nehru Jackets</a>
-                    <a>Dhotis</a>
-                </div>
-
-                <div class="column">
-                    <h4>Bottomwear</h4>
-                    <a>Jeans</a>
-                    <a>Casual Trousers</a>
-                    <a>Formal Trousers</a>
-                    <a>Shorts</a>
-                    <a>Track Pants & Joggers</a>
-
-                    <h4>Innerwear & Sleepwear</h4>
-                    <a>Briefs & Trunks</a>
-                    <a>Boxers</a>
-                    <a>Vests</a>
-                    <a>Sleepwear & Loungewear</a>
-                    <a>Thermals</a>
-
-                    <h4>Plus Size</h4>
-                </div>
-
-                <div class="column">
-                    <h4>Footwear</h4>
-                    <a>Casual Shoes</a>
-                    <a>Sports Shoes</a>
-                    <a>Formal Shoes</a>
-                    <a>Sneakers</a>
-                    <a>Sandals & Floaters</a>
-                    <a>Flip Flops</a>
-                    <a>Socks</a>
-
-                    <h4>Sunglasses & Frames</h4>
-                    <h4>Watches</h4>
-                </div>
-
-                <div class="column">
-                    <h4>Sports & Active Wear</h4>
-                    <a>Sports Shoes</a>
-                    <a>Sports Sandals</a>
-                    <a>Active T-Shirts</a>
-                    <a>Track Pants & Shorts</a>
-                    <a>Tracksuits</a>
-                    <a>Jackets & Sweatshirts</a>
-                    <a>Sports Accessories</a>
-                    <a>Swimwear</a>
-
-                    <h4>Gadgets</h4>
-                    <a>Smart Wearables</a>
-                    <a>Fitness Gadgets</a>
-                    <a>Headphones</a>
-                    <a>Speakers</a>
-                </div>
-
-                <div class="column">
-                    <h4>Fashion Accessories</h4>
-                    <a>Wallets</a>
-                    <a>Belts</a>
-                    <a>Perfumes & Body Mists</a>
-                    <a>Trimmers</a>
-                    <a>Deodorants</a>
-                    <a>Ties, Cufflinks & Pocket Squares</a>
-                    <a>Accessory Gift Sets</a>
-                    <a>Caps & Hats</a>
-                    <a>Mufflers, Scarves & Gloves</a>
-                    <a>Phone Cases</a>
-                    <a>Rings & Wristwear</a>
-                    <a>Helmets</a>
-
-                    <h4>Bags & Backpacks</h4>
-                    <h4>Luggages & Trolleys</h4>
-                </div>
-            </div>
-    </div>
-    <li><a href="#">Women wear</a></li>
-    <li><a href="#">Winter wear</a></li>
-    <li><a href="#">Lounge wear</a></li>
-    <li><a href="#">Sleep wear</a></li>
-    <li><a href="#">Bottom wear</a></li>
-    <li><a href="#">Western wear</a></li>
-    <li><a href="#">New Arrivals</a></li>
-
-    </ul>
-
-    </div>
-
-    <!-- Category & Brands -->
-    <nav class="nav-links">
-        <div class="category-sec">
-            <span>Category <i class="fa-solid fa-chevron-down"></i></span>
-            <ul class="dropdown">
-                <li><a href="#">International & Fast Fashion
-                    </a></li>
-                <li><a href="#">Indian Ethnic & Fusion
-                    </a></li>
-                <li><a href="#">Premium & Formal Wear
-                    </a></li>
-                <li><a href="#">Casual & Streetwear
-                    </a></li>
-                <!-- <li><a href="#">Lounge wear</a></li>
-                <li><a href="#">Sleep wear</a></li>
-                <li><a href="#">Bottom wear</a></li>
-                <li><a href="#">Western wear</a></li>
-                <li><a href="#">New Arrivals</a></li> -->
-
-            </ul>
-        </div>
-        <div class="brand-sec">
-            <span>Brands <i class="fa-solid fa-chevron-down"></i></span>
-            <ul class="dropdown">
-                <li><a href="#">Nike</a></li>
-                <li><a href="#">Adidas</a></li>
-                <li><a href="#">Puma</a></li>
-                <li><a href="#">H&M</a></li>
-                <li><a href="#">Zara</a></li>
-                <li><a href="#">Viro Moda</a></li>
-                <li><a href="#">Allen Sony</a></li>
-                <li><a href="#">Mark & Spencers</a></li>
-                <li><a href="#">Luis Philippe</a></li>
-                <li><a href="#">Venhussan</a></li>
-                <li><a href="#">Raymond</a></li>
-                <li><a href="#">Park Avenue & Arrow</a></li>
-                <li><a href="#">Roadster</a></li>
-
-
-            </ul>
-        </div>
-    </nav>
-
-    <!-- Search Bar -->
-    <div class="search-bar">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" placeholder="Search for category">
-        <i class="fa-solid fa-microphone"></i>
-    </div>
-
-    <!-- Icons -->
-    <div class="header-icons">
-        <i class="fa-regular fa-heart"></i>
-        <i class="fa-solid fa-cart-shopping"></i>
-        <i class="fa-solid fa-user"></i>
-    </div>
-
-</header>
+<app-navbar></app-navbar>
+<app-menu></app-menu>
