--- a/src/app/application/modules/dashboard/header/navbar/navbar.html
+++ b/src/app/application/modules/dashboard/header/navbar/navbar.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+<div class="top-header">
+    <div class="logo">
+        LOGO
+    </div>
+    <button class="auth-btn">Sign-Up / Sign-In</button>
+</div>
