--- a/src/app/application/modules/user/login/login.html
+++ b/src/app/application/modules/user/login/login.html
@@ -1,30 +1,86 @@
 <div class="login-container">
     <img src="assets/images/sunset.png" style="opacity: 0.8;">
     <div class="page-content">
+        <form class="login-form" [formGroup]="registerForm" (ngSubmit)="onSubmit()" autocomplete="off">
 
-        <div class="input-group">
-            <label>Username</label>
-            <div class="input-box">
-                <i class="fa fa-user"></i>
-                <input type="text" placeholder="Type your username">
+            <div class="input-group">
+                <label>Username</label>
+                <div class="input-box" style="display: flex; flex-direction: column;">
+                    <div class="input-data-box" style="display: flex;">
+                        <i class="fa fa-user"></i>
+                        <input type="text" placeholder="Type your username" name="username" formControlName="userid">
+                    </div>
+
+                    <div class="input-validator">
+
+                        @if (registerForm.get('userid')?.invalid && registerForm.get('userid')?.touched) {
+                        @if (registerForm.get('userid')?.errors?.['required'])
+                        {
+                        <div class="text-danger">Username is required</div>
+                        }
+                        @if (registerForm.get('userid')?.errors?.['email'])
+                        {
+                        <div class="text-danger">Please enter a valid email address</div>
+                        }
+                        <!-- @if (registerForm.get('userid')?.errors?.['minlength'])
+                        {
+                        <div class="text-danger">Username must be at least 5 characters long</div>
+                        }
+                        @if (registerForm.get('userid')?.errors?.['maxlength'])
+                        {
+                        <div class="text-danger">Username must be at less or equal to 10 characters long</div>
+                        } -->
+                        }
+
+                    </div>
+                </div>
             </div>
-        </div>
 
-        <div class="input-group">
-            <label>Password</label>
-            <div class="input-box">
-                <i class="fa fa-lock"></i>
-                <input type="password" placeholder="Type your password">
+            <div class="input-group">
+                <label>Password</label>
+                <div class="input-box" style="display: flex; flex-direction: column;">
+                    <div class="input-data-box" style="display: flex;">
+                        <i class="fa fa-lock"></i>
+                        <input type="password" placeholder="Type your password" name="password"
+                            formControlName="password">
+                    </div>
+
+                    <div class="input-validator">
+
+                        @if (registerForm.get('password')?.invalid && registerForm.get('password')?.touched) {
+                        @if( registerForm.get('password')?.errors?.['required'])
+                        {
+                        <p class="text-danger" style="display: block;">Password is required</p>
+                        }
+                        @if( registerForm.get('password')?.errors?.['minlength'])
+                        {
+                        <p class="text-danger" style="display: block;">Password must be at least 6 characters long</p>
+                        }
+                        @if( registerForm.get('password')?.errors?.['maxlength'])
+                        {
+                        <p class="text-danger" style="display: block;">Password must be at most 10 characters long</p>
+                        }
+                        }
+
+
+                    </div>
+
+
+                </div>
             </div>
-        </div>
 
-        <div class="forgot">
-            <a href="#">Forgot password?</a>
-        </div>
+            <div class="forgot">
+                <a href="#">Forgot password?</a>
+            </div>
 
-        <button class="login-btn">LOGIN</button>
+            <div class="buttons">
+                <button type="submit" class="login-btn">LOGIN</button>
 
-        <p class="or">Or Sign Up Using</p>
+                <button type="reset" class="reset-btn">RESET</button>
+            </div>
+
+            <p class="or">Or Sign Up Using</p>
+        </form>
 
         <div class="social-icons">
             <div class="icon facebook"><i class="fab fa-facebook-f"></i></div>
